--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ h1 {
   height: 293px;
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
-  align-items: center;;
+  align-items: center;
 }
 
 .header__logo {
@@ -331,7 +331,6 @@ h1 {
   line-height: 100%;
   letter-spacing: 0em;
   text-align: center;
-
 }
 
 .footer__menu-list {
