--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,6 @@ h1 {
 
 .header {
   width: 1100px;
-  height: 293px;
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
@@ -41,15 +40,15 @@ h1 {
   line-height: 100%;
   letter-spacing: 0em;
   list-style: circle;
-  padding-left: 0;
-  margin: 133px 0 138px 50px;
+  margin: 0;
+  padding: 135px 0 140px 50px;
 }
 
 .header__links-list-item_no-bullit {
-  list-style: none !important;
+  list-style: none;
 }
 
-.header-list-underline {
+.list-underline {
   text-decoration: underline;
   text-underline-offset: 4px;
 }
@@ -62,13 +61,13 @@ h1 {
   padding-left: 5px;
 }
 
-.address {
+.header-address {
   justify-self: end;
   margin-right: 86.5px;
-  margin-top: -5px;
+  padding-bottom: 4.5px;
 }
 
-.header__address {
+.address {
   list-style: none;
   font-weight: 400;
   font-size: 18px;
@@ -85,15 +84,18 @@ h1 {
 
 .cover {
   width: 1100px;
-  height: 757px;
+  min-height: 757px;
   background-image: url(../images/lotus-flower.jpg);
   background-position: center top;
-  background-color: rgba(0, 0, 0, 0.6);
   background-size: cover;
   background-repeat: no-repeat;
-  background-blend-mode: overlay;
   padding: 0;
   margin: 0;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: overlay;
 }
 
 .cover__title {
@@ -116,12 +118,11 @@ h1 {
 }
 
 .cover__description {
-  height: 51px;
   width: 1000px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 106.5px 50px 50px 50px;
+  margin: 96px 50px 50px 50px;
 }
 
 .cover__description-text {
@@ -133,11 +134,11 @@ h1 {
   color: #ffffff;
 }
 
-.letter-spacing-first {
+.letter-spacing-long {
   word-spacing: 19px;
 }
 
-.letter-spacing-second {
+.letter-spacing-short {
   word-spacing: 18px;
 }
 
@@ -157,8 +158,7 @@ h1 {
 
 .lots {
   width: 1052px;
-  height: 723px;
-  margin: 184.6px auto 115.4px;
+  margin: 184.6px auto 120px;
 }
 
 .lots-heading {
@@ -167,12 +167,14 @@ h1 {
   line-height: 100%;
   letter-spacing: 0em;
   text-transform: uppercase;
-  margin: 0 891px 29.6px 40px;
+  margin: 0 auto 29.6px;
+  padding-left: 40px;
 }
 
 .lots__card-list {
   display: flex;
   gap: 25px;
+  flex-wrap: wrap;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -180,11 +182,11 @@ h1 {
 
 .lots__card-list-item {
   width: 334px;
-  height: 596px;
+  min-height: 596px;
 }
 
 .card-link {
-  height: 596px;
+  min-height: 596px;
   width: 100%;
   padding: 0;
   margin: 0;
@@ -197,6 +199,9 @@ h1 {
   height: 100%;
   box-sizing: border-box;
   padding: 48px 40px 48px 40px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
 }
 
 .card__title {
@@ -230,25 +235,14 @@ h1 {
 
 .card_type_film {
   background-image: url(../images/photo.jpg);
-  background-position: top center;
-  background-color: rgba(0, 0, 0, 0.6);
-  background-blend-mode: overlay;
 }
 
 .card_type_book {
   background-image: url(../images/book.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: rgba(0, 0, 0, 0.6);
-  background-blend-mode: overlay;
 }
 
 .card_type_picture {
   background-image: url(../images/picture.jpg);
-  background-position: center;
-  background-color: rgba(0, 0, 0, 0.6);
-  background-blend-mode: overlay;
 }
 
 .lots__look-more-link {
@@ -258,15 +252,15 @@ h1 {
   line-height: 100%;
   letter-spacing: 0em;
   text-decoration: underline;
-  margin: 33px 820px 0 40px;
+  margin: 33px auto 0;
+  padding-left: 40px;
   text-underline-offset: 4px;
   text-decoration-thickness: 1px;
 }
 
 .about {
-  margin: 0 24px 180px 24px;
+  margin: 0 24px 160px 24px;
   width: 1052px;
-  height: 595px;
   display: grid;
   grid-template-columns: 334px 1fr;
   gap: 25px;
@@ -299,6 +293,7 @@ h1 {
 }
 
 .about__text {
+  width: 693px;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
@@ -312,10 +307,8 @@ h1 {
 
 .footer {
   width: 1100px;
-  height: 180px;
   display: grid;
   grid-template-columns: 468.6px 163.9px 467.5px;
-  grid-template-rows: 180px;
 }
 
 .footer-address {
@@ -339,11 +332,11 @@ h1 {
   padding: 0;
 }
 
-.footer__menu-list-item-main {
+.footer__menu-list-item-top {
   margin-bottom: 4px;
 }
 
-.footer__menu-list-item-two {
+.footer__menu-list-item-center {
   margin-bottom: 3px;
 }
 
